# MVP

./: .codex_root.txt  .gitignore  LICENSE  README.md  pyproject.toml
.runtime/: move_cube.py
bridge_blender/: README.md
bridge_blender/mvp_bridge/: __init__.py
docs/: ARCHITECTURE.md  CLAUDE_DESKTOP_SETUP.md  CONSTITUTION.md  CONTEXT.md  INTEGRATION_CLAUDE_DESKTOP.md  INTEGRATION_CODEX.md  PRODUCT.md  SCOPE.md  TOOLING_POLICY.md  _PROOF.md
schemas/: README.md  contract_v1.md  determinism_rules_v1.md  error_model_v1.md  execution_model_v1.md  macro_registry_v1.md  scene_state_v1.md  tool_registry_v1.yaml  versioning_policy_v1.md
scripts/: print_env.ps1  run_http.ps1  run_mcp_stdio.ps1  run_stdio.ps1  smoke_http.ps1
src/mvp/: __init__.py  contracts.py  errors.py  mcp_stdio.py  profiles.py  runtime.py  server.py  tools.py
tests/: README.md  test_m0_hello_mcp.py  test_m1_contracts.py  test_m2_runtime_adapter.py  test_m3_profiles.py  test_m4_errors_and_catalog.py  test_m5_http_transport.py  test_m8_external_http_runtime.py  test_smoke_move_cube.py
