[project]
name = "mvp"
version = "0.0.0"
description = "MCP Blender Core specifications (pre-design; no runtime)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "aresnake" }]
dependencies = [
    "mcp>=0.1.0",
    "anyio>=4.0.0",
    "pydantic>=2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]
