[project]
name = "mvp"
version = "0.1.0"
description = "MCP Blender Core specifications (pre-design; no runtime)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "aresnake" }]
dependencies = [
    "mcp>=1.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
